--- a/styles/style.css
+++ b/styles/style.css
@@ -24,8 +24,45 @@ html{
     scroll-padding-top: 9rem;
     scroll-behavior: smooth;
 }
+html::-webkit-scrollbar{
+    width: 0.9rem;
+    background-color: #fff;
+    height: 1rem;
+}
+html::-webkit-scrollbar-thumb{
+    border-radius: 3rem;
+    background-color: var(--black-color);
+    
+}
 body{
     background-color: var(--main-color);
+}
+section{
+    padding: 3.5rem 7%;
+}
+.btn{
+    color: #fff;
+    background-color: var(--black-color);
+    border-radius: 30rem;
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 2rem 3.75rem;
+    font-size: 1.7rem;
+    cursor: pointer;
+}
+.btn:hover{
+    opacity: 0.8;
+}
+.heading{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 4rem;
+    margin-bottom: 3.5rem;
+    border-bottom: 0.1rem solid #fff;
+}
+.heading span {
+    text-transform: uppercase;
+    color:var(--black-color) ;
 }
 /* header start */
 .header .logo img{
@@ -64,3 +101,66 @@ body{
 
 
 /* header end */
+/* homa start */
+.home{
+    min-height: 100vh;
+    background: url(../images/home.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin-top: -14.5rem;
+    display: flex;
+    align-items: center;
+}
+.home .content{
+    max-width: 60rem
+}
+.home .content h3{
+    font-size: 6rem;
+    color: #fff;
+}
+.home .content p{
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 1.8;
+    padding: 1rem 0;
+    color: #ccc;
+}
+
+/* homa end */
+/* menu start */
+.menu .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem , 1fr));
+    gap: 1.5rem;
+}
+.menu .box-container .box{
+    background-color:#fff ;
+    display: flex;
+    flex-direction: column;
+    border-radius: 3rem;
+    padding: 3rem;
+    min-height: 40rem;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.menu .box-container .box img{
+    object-fit: cover;
+    width: 100%;
+}
+.menu .box-container .box .menu-category{
+    font-size: 1.2rem;
+}
+.menu .box-container .box h3{
+    font-size: 3rem;
+    padding: 1rem 0;
+}
+.menu .box-container .box .price{
+    font-size: 2.5rem;
+    padding: 0.5rem 0;
+}
+.menu .box-container .box .price span{
+    text-decoration: line-through;
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+/* menu end */
