--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
     text-decoration: none;
     outline: none;
     text-transform: capitalize;
-    transition: 0.2 ease;
+    transition: 0.2s ease;
     font-family: 'Poppins', sans-serif;
 }
 html{
@@ -318,3 +318,173 @@ overflow-wrap: anywhere;
  font-size: 1.2rem;
 }
 /* review end */
+/* contact start */
+.contact .row{
+    display: flex;
+    background-color: var(--black-color);
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.contact .row .map{
+    flex: 1 1 45rem;
+    width: 100%;
+    object-fit: cover;
+}
+.contact .row form{
+    flex: 1 1 45rem;
+    padding: 5rem 2rem ;
+    text-align: center;
+}
+ .contact .row form h3{
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    color: #fff;
+ }
+ .contact .row form .input-box{
+    display: flex;
+    align-items: center;
+    margin: 2rem 0;
+    border: var(--border);
+ }
+ .contact .row form .input-box i{
+    color: #fff;
+    font-size: 2rem;
+    padding-left: 2rem;
+ }
+ .contact .row form .input-box input{
+    width: 100%;
+    color: #fff;
+    background: none;
+    padding: 2rem;
+    font-size: 1.7rem;
+    text-transform: none;
+ }
+ .contact .row form .btn{
+    color: var(--main-color);
+    background-color: #fff;
+    font-weight: bold;
+ }
+ /* contact end */
+ /* blog start */
+ .blog .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem , 1fr));
+    gap: 1.5rem; 
+ }
+ .blog .box-container .box{
+    background-color: #fff;
+    border-radius: 3rem;
+ }
+ .blog .box-container .box .image{
+    height: 25rem;
+    overflow: hidden;
+    width: 100%;
+    border-top-left-radius: 3rem;
+    border-top-right-radius: 3rem;
+ }
+ .blog .box-container .box .image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    
+ }
+ .blog .box-container .box:hover .image img{
+    transform: scale(1.2);
+    
+ }
+ .blog .box-container .box .content{
+ padding: 2rem;
+ }
+ .blog .box-container .box .content span{
+    display: block;
+    padding-top: 1rem;
+    font-size: 2rem;
+ }
+ .blog .box-container .box .content .title{
+  font-size: 2.5rem;
+  line-height: 1.5;
+ }
+ .blog .box-container .box .content p{
+    font-size: 1.6rem;
+    line-height: 1.8;
+    color: #ccc;
+    padding: 1rem 0;
+ }
+ /* blog end */
+ /* footer start */
+ .footer{
+    background-color: var(--black-color);
+    text-align: center;
+ }
+ .footer .search{
+    display: flex;
+    justify-content: center;
+ }
+ .footer .search .search-input{
+    width: 30rem;
+ }
+ .footer .search .btn-primary{
+    background-color: var(--main-color);
+    padding: 1rem 2rem;
+    margin-left: 1rem;
+ }
+ .search-input{
+    font-size: 1.6rem;
+    text-transform: none;
+    color: var(--black-color);
+    padding: 1rem;
+    border-radius: 3rem;
+ }
+ .footer .share{
+    padding: 2rem 0;
+ }
+ .footer .share a{
+    width: 5rem;
+    height: 5rem;
+    line-height: 5rem;
+    color: #fff;
+    font-size: 2rem;
+    border:var(--border);
+    border-radius: 50%;
+    margin: 0.3rem;
+ }
+ .footer .share a:hover{
+    background-color: var(--main-color);
+ }
+ .footer .links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+ }
+ .footer .links a{
+    background-color: var(--main-color);
+    font-size: 2rem;
+    color: #fff;
+    padding: 0.8rem 2rem;
+ }
+ .footer .links a:hover{
+    background-color: var(--black-color);
+    border: var(--border);
+    opacity: 0.7;
+ }
+ .footer .links a.active{
+    background-color: var(--black-color);
+    border: var(--border);
+ }
+ .footer .links a.active:hover{
+    background-color:#e84242;
+ }
+ .footer .credit{
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 300;
+    padding-top: 1.5rem;
+ }
+ .footer .credit span{
+    color: var(--main-color);
+ }
+ /* footer end */
+ /* responsive start */
+ 
+ /* responsive end */
