--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,78 @@ a{
     color:var(--black-color) ;
 }
 /* header start */
+.header .search-form{
+    display: flex;
+    top: 115%;
+    right: 7%;
+    width: 50rem;
+    height: 5rem;
+    position: absolute;
+    background-color: #fff;
+    align-items: center;
+    border-radius: 3rem;
+    box-shadow: 0px  0px 25px 2px rgb(0 0 0 /75%);
+    transform: scaleY(0);
+}
+.header .search-form.active{
+transform: scaleY(1);
+}
+.header .cart-items-container{
+    position: absolute;
+    top: 95%;
+    height: calc(100vh - 9rem);
+    width: 35rem;
+    background-color: #fff;
+    box-shadow: 0px 20px 14px 0px rgb(0 0 0 /75%);
+    right: -100%;
+}
+.header .cart-items-container.active{
+    right: 3rem;
+}
+.header .cart-items-container .cart-item{
+    position: relative;
+    gap: 1.5rem;
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+}
+.header .cart-items-container  .cart-item img{
+    height: 7rem;
+}
+.header .cart-items-container  .cart-item .fa-times{
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--black-color);
+}
+.header .cart-items-container  .cart-item:hover{
+    box-shadow: 0px 0px 10px 0px;
+}
+.header .cart-items-container  .cart-item .content h3{
+    font-size: 2rem;
+    color: var(--black-color);
+    padding-bottom: 0.5rem;
+}
+.header .cart-items-container .cart-item .price{
+    font-size: 1.5rem;
+    color: var(--black-color);
+}
+.header .cart-items-container .btn{
+    width: 100%;
+    text-align: center;
+    border-radius: unset;
+}
+.header .search-form i{
+    cursor: pointer;
+    font-size: 2.2rem;
+    margin-right: 1.5rem;
+    color: var(--black-color);
+}
+.header .search-form input{
+    width: 100%;
+}
 .header .logo img{
     height: 10rem;
 }
@@ -102,7 +174,9 @@ a{
     margin-left: 2rem;
     background-color: transparent;
 }
-
+#menu-btn{
+    display: none;
+}
 
 /* header end */
 /* homa start */
@@ -486,5 +560,45 @@ overflow-wrap: anywhere;
  }
  /* footer end */
  /* responsive start */
- 
+ @media (max-width: 991px) {
+    html{
+        font-size: 55%;
+    }
+    .header{
+        padding: 1.5rem 2rem;
+    }
+    .header .logo img{
+        height: 7rem;
+    }
+    section{
+        padding: 2rem;
+    }
+    .products .box-container .box .box-head .name{
+        font-size: 3.4rem;
+    }
+ }
+ @media (max-width: 768px){
+    #menu-btn{
+        display: inline-block;
+    }
+    .header .navbar{
+        position:absolute;
+        top: 95%;
+        background-color: #fff;
+        height: calc(100vh - 9rem);
+        width: 30rem;
+        box-shadow: 0px 20px 14px 0px rgb(0 0 0 / 75%);
+        right: -100%;
+    }
+    .header .navbar.active{
+        right: 3rem;
+    }
+    .header .navbar a{
+        display: block;
+        margin: 1.5rem;
+        color: var(--black-color);
+        padding: 0.5rem;
+        font-size: 2rem;
+    }
+ }
  /* responsive end */
